--- a/src/Pages/Apropos/_Apropos.scss
+++ b/src/Pages/Apropos/_Apropos.scss
@@ -1,4 +1,6 @@
 @import '../../style/main.scss';
+@import '../../style/utils/_mixins.scss';
+@import '../../style/utils/_variables.scss';
 
 .about{
     display: flex;
