--- a/src/Components/Banner/_Banner.scss
+++ b/src/Components/Banner/_Banner.scss
@@ -1,34 +1,40 @@
 @import '../../style/main.scss';
+@import '../../style/utils/mixins';
+@import '../../style/utils/variables';
 
-.banner,
-.banner_about {
-    position: relative;
-    @include flex;
-    border-radius: 25px;
-    background-position: center;
-    background-size: cover;
-    height: 223px;
-    width: 100%;
-    padding: 20px;
-    max-width: 95%;
-    margin: 43px auto;
+.banner-container {
+	height: 111px;
+	@include small-radius;
+	@include flex-banner;
 
-    @media screen and (max-width: 550px) {
-        margin: 20px auto;
-        height: 120px;
-    }
-
-    h2 {
-        color: $color-primary;
-        font-size: clamp(24px, 4vw, 48px);
-        font-weight: 500;
-    }
+	@media screen and (min-width: $breakpoint-desktop) {
+		height: 223px;
+		@include big-radius;
+		@include flex-banner;
+	}
 }
 
-.banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../../assets/home_cover.png');
+.banner-text {
+	position: absolute;
+	top: 28.04%;
+	left: 5.6%;
+	right: 32.53%;
+	bottom: 80.05%;
+	font-size: 24px;
+	font-weight: 500;
+	line-height: 100%;
+	color: $tertiary-color;
+	@include small-radius;
+	width: 217px;
+	height: 48px;
 
-    &_about {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../../assets/about_cover.png');
-    }
+	@media screen and (min-width: $breakpoint-desktop) {
+		top: 0;
+		left: 0;
+		right: 0;
+		@include flex-center;
+		@include WH-full;
+		@include font(48px, 500);
+		@include big-radius;
+	}
 }
