--- a/src/Components/Collapse/_Collapse.scss
+++ b/src/Components/Collapse/_Collapse.scss
@@ -1,72 +1,100 @@
 @import '../../style/main.scss';
+@import '../../style/utils/mixins';
+@import '../../style/utils/variables';
 
-.collapse{
-    background-color: $color-tertiary;
-    max-width: 1100px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    margin: 0 auto;
-    font-size: inherit;
-    &_title{
-        @include flex(row, space-between, center);
-        background-color: $color-secondary;
-        color: $color-primary;
-        border-radius: 10px;
-        font-weight: 500;
-        font-size: clamp(13px, 1.8vw, 18px);
-        padding: 10px 15px;
-        cursor: pointer;
-        .arrow{
-            transition: all 0.2s ease-in-out;
-            @media screen and (max-width: 1230px){
-                width: 12px;     
-            }
-        }
-        .arrow_up{
-            transform: rotate(0deg);
-        }
-        .arrow_down{
-            transform: rotate(180deg);
-        }
-    }
-    &_content{
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        letter-spacing: 1px;
-        visibility: visible;
-        opacity: 1;
-        height: auto;
-        padding: 10px;
-        letter-spacing: 1px;
-        font-size: clamp(12px, 1.8vw, 18px);
-        color: $color-secondary;
-        transition: visibility 0.5s ease-in-out,
-                    opacity 0.5s ease-in-out,
-                    height 0.2s ease-in-out;
-    }
-    &_content_hidden{
-        visibility: hidden;
-        opacity: 0;
-        height: 0;
-    }
+
+.collapse {
+	width: 100%;
+	margin: 20px 0;
+
+	@media screen and (min-width: $breakpoint-desktop) {
+		margin: 31px auto 0;
+	}
+
+	&__visible {
+		background: $primary-color;
+		color: $tertiary-color;
+		cursor: pointer;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		height: 30px;
+		padding: 7px 15px;
+		border-radius: 5px;
+		width: 100%;
+
+		@media screen and (min-width: $breakpoint-desktop) {
+			height: 47px;
+		}
+
+		h2 {
+			@include font(13px, 500);
+
+			@media screen and (min-width: $breakpoint-desktop) {
+				@include font(24px, 500);
+			}
+		}
+	}
+
+	&__toggle {
+		opacity: 0;
+		color: $primary-color;
+		background: $secondary-color;
+		border-radius: 5px;
+		transition: opacity 0.4s ease-in-out, height 0.4s 0.4s ease-in-out;
+
+		p {
+			margin: 0;
+			padding: 22px 15px;
+			pointer-events: none;
+			@include font(12px, 400);
+
+			@media screen and (min-width: $breakpoint-desktop) {
+				@include font(24px, 400);
+			}
+		}
+	}
 }
 
-.accomodation_collapse{
-    display: flex;
-    justify-content: space-between;
-    gap: 70px;
-    margin: 30px auto;
-    width: 95%;
-    &_item{
-        width: 50%;
-    }
-    @media screen and (max-width: 650px){
-        flex-direction: column;
-        gap: 20px;
-        margin: 20px auto;
-        &_item{
-            width: 100%;
-        }    
-    }
+.animated {
+	opacity: 1;
+	transition: height 0.4s ease-in-out, opacity 0.4s 0.4s ease-in-out;
+}
+
+.chevron {
+	width: 9px;
+	transform: rotate(0deg);
+	transition: 0.4s 0.4s ease-in-out;
+
+	@media screen and (min-width: $breakpoint-desktop) {
+		width: 15px;
+	}
+}
+
+.rotated {
+	transform: rotate(180deg);
+	transition: 0.4s ease-in-out;
+}
+
+.about-style {
+	width: 100%;
+	@include flex-column;
+
+	@media screen and (min-width: $breakpoint-desktop) {
+		width: 87.5%;
+	}
+}
+
+.collapse-fiche-container {
+	@include flex-column;
+	width: 100%;
+
+	@media screen and (min-width: $breakpoint-desktop) {
+		flex-direction: row;
+		gap: 6%;
+	}
+}
+
+.equipList {
+	list-style-type: none;
 }
