--- a/src/Components/Footer/_Footer.scss
+++ b/src/Components/Footer/_Footer.scss
@@ -1,4 +1,8 @@
-.Footer {
+@import '../../style/utils/_mixins.scss';
+@import '../../style/utils/_variables.scss';
+
+
+.foot-container {
 	@include flex-center;
 	width: 100%;
 	height: 209px;
