--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -1,18 +1,30 @@
 @import '../../style/main.scss';
+@import '../../style/utils/mixins';
+@import '../../style/utils/variables';
 
-.header{
-    @include flex(row, space-between, center);
-    height: 68px;
-    max-width: 95%;
-    width: 100%;
-    margin: 0 auto;
-    @media screen and (max-width: 900px){
-        height: 40px;
-    }
-    img{
-        height: 60%;
-        @media screen and (max-width: 700px){
-            height: 40px;
-        }
-    }
+
+.headerWrap {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 5%;
+
+	@media screen and (min-width: $breakpoint-desktop) {
+		margin: 40px 100px 49px 100px;
+	}
+
+	&__fig {
+		display: flex;
+		align-items: flex-start;
+		margin: 0;
+		width: 9rem;
+
+		@media screen and (min-width: $breakpoint-desktop) {
+			width: 13.2rem;
+		}
+
+		img {
+			width: 100%;
+		}
+	}
 }
