--- a/src/style/utils/_variables.scss
+++ b/src/style/utils/_variables.scss
@@ -1,3 +1,17 @@
 $color-primary : #fff;
 $color-secondary : #FF6060;
 $color-tertiary : #F7F7F7;
+$tertiary-color: #F7F7F7; // sur certains fichiers j'ai déclarer ce nom là au lieu de l'autre a modifier.
+
+$footer-color: #000000;
+$background-color: rgba(0, 0, 0, 0.3);
+$linear-cards: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+
+$about-background: $background-color url(../../assets/images/about-background.png);
+$about-background-mobile: $background-color url(../../assets/images/mobile-about-background.png);
+$banner-background: $background-color url(../../assets/images/background-banner.png);
+
+$breakpoint-desktop: 769px;
+
+$wmin: 375px;
+$wmax: 768px;
