Modifications couleur / reparation page a propos
j'ai utilisé un fichier json pour y mettre les informations du collapse au lieu de l'écrire directement dans la page a propos

--- a/src/Components/Banner/_Banner.scss
+++ b/src/Components/Banner/_Banner.scss
@@ -1,6 +1,6 @@
-@import '../../style/main.scss';
-@import '../../style/utils/mixins';
-@import '../../style/utils/variables';
+@import '../../style/utils/_mixins.scss';
+@import '../../style/utils/_variables.scss';
+
 
 .banner-container {
 	height: 111px;
@@ -23,7 +23,7 @@
 	font-size: 24px;
 	font-weight: 500;
 	line-height: 100%;
-	color: $tertiary-color;
+	color: $color-tertiary;
 	@include small-radius;
 	width: 217px;
 	height: 48px;
