--- a/src/Components/Collapse/_Collapse.scss
+++ b/src/Components/Collapse/_Collapse.scss
@@ -1,4 +1,4 @@
-@import '../../style/main.scss';
+
 @import '../../style/utils/mixins';
 @import '../../style/utils/variables';
 
@@ -12,8 +12,8 @@
 	}
 
 	&__visible {
-		background: $primary-color;
-		color: $tertiary-color;
+		background: $color-secondary;
+		color: $color-tertiary;
 		cursor: pointer;
 		display: flex;
 		justify-content: space-between;
@@ -38,8 +38,7 @@
 
 	&__toggle {
 		opacity: 0;
-		color: $primary-color;
-		background: $secondary-color;
+		background: $color-primary;
 		border-radius: 5px;
 		transition: opacity 0.4s ease-in-out, height 0.4s 0.4s ease-in-out;
 
