--- a/src/Components/Footer/_Footer.scss
+++ b/src/Components/Footer/_Footer.scss
@@ -15,7 +15,7 @@
 		display: flex;
 		align-items: flex-end;
 		justify-content: center;
-		color: $tertiary-color;
+		color: $color-tertiary;
 		width: 100%;
 		margin: 4% 0 3% 0;
 
