--- a/src/Components/Card/_Card.scss
+++ b/src/Components/Card/_Card.scss
@@ -10,7 +10,6 @@
     min-width: 335px;
     transition: transform 1s;
 
-
     & img {
         display: flex;
         width: 100%;
@@ -56,6 +55,12 @@
         background-color: #f7f7f7;
         @include big-radius;
         margin: 43px 0;
+    }
+
+    & > .card-logement {
+        flex: 0 1 30%; // Fixe la largeur à 30% pour trois cartes par rangée
+        box-sizing: border-box;
+        margin: 10px; 
     }
 }
 
