--- a/src/Components/ErrorPage/_ErrorPage.scss
+++ b/src/Components/ErrorPage/_ErrorPage.scss
@@ -1,8 +1,8 @@
-@import '../../style/utils/mixins';
-@import '../../style/utils/variables';
+@import '../../style/utils/_mixins.scss';
+@import '../../style/utils/_variables.scss';
 
 .errorContainer {
-	color: $color-primary;
+	color: $color-secondary;
 	@include flex-column;
 	margin: 22px 6%;
 }
@@ -39,7 +39,6 @@
 .errorLinkHome {
 	@extend %flex-error;
 	text-decoration: none;
-	color: $primary-color;
 	@include font(14px, 500);
 	margin-top: 9rem;
 
