--- a/src/Components/Nav/_Nav.scss
+++ b/src/Components/Nav/_Nav.scss
@@ -12,7 +12,7 @@
 	&_link-home,
 	&_link-about {
 		@include font-right(12px);
-		color: $color-primary;
+		color: black;
 		text-decoration: none;
 		padding-left: 0.8rem;
 
@@ -23,6 +23,9 @@
 
 		&:hover,
 		&:focus {
+			text-decoration-line: underline;
+		}
+		&:active {
 			text-decoration-line: underline;
 		}
 	}
