--- a/src/Components/Tag/Tag.scss
+++ b/src/Components/Tag/Tag.scss
@@ -4,8 +4,8 @@
 
 .tagButton {
     @include flex-center;
-    background: $primary-color;
-    color: $tertiary-color;
+    background: $color-primary;
+    color: $color-tertiary;
     margin-top: 4%;
     @include font(10px, 500);
     height: 18px;
