--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,13 +1,13 @@
-@import 'base/base';
-@import 'utils/_variables';
-@import 'utils/mixins';
+
+@import 'utils/_variables.scss';
+@import 'utils/_mixins.scss';
 
 @import "../Components/AboutBanner/AboutBanner";
 @import "../Components/Banner/Banner";
 @import "../Components/Card/Card";
 @import "../Components/Carousel/Carousel";
 @import "../Components/Collapse/Collapse";
-@import "../Components/Error/Error";
+@import "../Components/ErrorPage/ErrorPage";
 @import "../Components/Footer/Footer";
 @import "../Components/Header/Header";
 @import "../Components/Host/Host";
