--- a/src/Components/Banner/_Banner.scss
+++ b/src/Components/Banner/_Banner.scss
@@ -3,6 +3,7 @@
 
 
 .banner-container {
+	margin: 0 40px;
 	height: 111px;
 	@include small-radius;
 	@include flex-banner;
@@ -27,6 +28,7 @@
 	@include small-radius;
 	width: 217px;
 	height: 48px;
+	;
 
 	@media screen and (min-width: $breakpoint-desktop) {
 		top: 0;
