--- a/src/Components/Collapse/_Collapse.scss
+++ b/src/Components/Collapse/_Collapse.scss
@@ -38,7 +38,7 @@
 
 	&__toggle {
 		opacity: 0;
-		background: $color-primary;
+		background: #F6F6F6;
 		border-radius: 5px;
 		transition: opacity 0.4s ease-in-out, height 0.4s 0.4s ease-in-out;
 
