--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -2,6 +2,8 @@
 @import 'utils/_variables.scss';
 @import 'utils/_mixins.scss';
 
+@import 'base/_base.scss';
+
 @import "../Components/AboutBanner/AboutBanner";
 @import "../Components/Banner/Banner";
 @import "../Components/Card/Card";
