--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -9,6 +9,7 @@
 }
 
 body {
+	height: 100%;
 	@include body-position;
 
 
@@ -16,6 +17,10 @@ body {
 		max-width: 100%;
 	}
 
+}
+
+html {
+	height: 100%;
 }
 
 main {
@@ -55,7 +60,7 @@ main {
 	}
 }
 
-*root {
+#root {
 	display: flex;
     height: 100%;
     flex-direction: column;
