--- a/src/Components/Card/_Card.scss
+++ b/src/Components/Card/_Card.scss
@@ -13,7 +13,7 @@
 
     & img {
         display: flex;
-        width: 100%;
+        width: 421px;
         @include small-radius;
         object-fit: cover;
         height: 316px;
@@ -45,15 +45,15 @@
 .cards-container {
     display: flex;
     justify-content: center;
-    width: 100%;
-    gap: 20px;
+    width: 90%;
+    gap: 50px;
     @include small-radius;
     flex-wrap: wrap;
     margin: 22px auto;
     padding: 0 20px;
 
     @media screen and (min-width: $breakpoint-desktop) {
-        gap: 50px;
+        gap: 20px;
         padding: 5% 1%;
         background-color: #f7f7f7;
         @include big-radius;
