--- a/src/Components/Card/_Card.scss
+++ b/src/Components/Card/_Card.scss
@@ -1,22 +1,30 @@
 @import '../../style/utils/mixins';
 @import '../../style/utils/variables';
 
-.card_logement {
+.card-logement {
     position: relative;
     display: flex;
-    width: 30%;
-    gap: 5px;
-    height: auto;
+    width: 335px;
+    height: 255px;
     @include small-radius;
-    min-height: 316px;
+    min-width: 335px;
     transition: transform 1s;
+
+    @media screen and (min-width: $breakpoint-desktop) {
+        width: 340px;
+        height: 340px;
+
+        &:hover,
+        &:focus {
+            @include boxShadow;
+        }
+    }
 
     & img {
         display: flex;
-        width: 421px;
+        width: 100%;
         @include small-radius;
         object-fit: cover;
-        height: 316px;
     }
 
     &__layer {
@@ -46,23 +54,17 @@
     display: flex;
     justify-content: center;
     width: 90%;
-    gap: 50px;
+    gap: 20px;
     @include small-radius;
-    flex-wrap: wrap;
     margin: 22px auto;
-    padding: 0 20px;
+    flex-wrap: wrap;
 
     @media screen and (min-width: $breakpoint-desktop) {
-        gap: 20px;
+        gap: 50px;
         padding: 5% 1%;
         background-color: #f7f7f7;
         @include big-radius;
         margin: 43px auto;
-    }
-
-    & > .card-logement {
-        width: 90%;
-        box-sizing: border-box;
     }
 }
 
