fin du css du site
correction du probleme de la banniere cachée sur la page home et fin du css

--- a/src/Components/Nav/_Nav.scss
+++ b/src/Components/Nav/_Nav.scss
@@ -22,11 +22,10 @@
 		}
 
 		&:hover,
-		&:focus {
-			text-decoration-line: underline;
-		}
+		&:focus
 		&:active {
 			text-decoration-line: underline;
 		}
+		
 	}
 }
