--- a/src/Components/Banner/_Banner.scss
+++ b/src/Components/Banner/_Banner.scss
@@ -4,10 +4,10 @@
 .banner-container {
 	margin: 0 40px;
 	height: 111px;
-	border: 2px solid red;
 	width: 90%;
 	@include small-radius;
 	@include flex-banner;
+	margin-bottom: 200px;
 	
 
 	@media screen and (min-width: $breakpoint-desktop) {
